# cargo-clearlydefined

./: .gitignore  Cargo.toml  NOTICE.md  README.md
.github/workflows/: ci.yaml
example/: Cargo.toml
src/: args.rs  cd.rs  data.rs  main.rs  report.rs
