[package]
name = "cargo-clearlydefined"
version = "0.1.1"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2018"

keywords = ["license", "cargo", "clearlydefined"]
license = "EPL-2.0"
description = "A tool for checking dependencies with clearlydefined.io"
repository = "https://github.com/ctron/keycloak-crd"
readme = "README.md"

[dependencies]

anyhow = "1.0"

cargo-lock = "4.0"

semver = "0.9"
serde_json = "1.0"

clap = "2"
structopt = "0.3"

futures = "0.3.5"

reqwest = { version = "0.10", features = ["json"] }
tokio = { version = "0.2", features = ["full"] }

log = "0.4"
simplelog = "0.8"

prettytable-rs = "0.8"