[package]
name = "cargo-clearlydefined"
version = "0.2.2"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"

keywords = ["license", "cargo", "clearlydefined"]
license = "EPL-2.0"
description = "A tool for checking dependencies with clearlydefined.io"
repository = "https://github.com/ctron/keycloak-crd"
readme = "README.md"

[dependencies]

anyhow = "1.0"

cargo-lock = "9"

semver = "1"
serde_json = "1.0"

clap = "2"
structopt = "0.3"

futures = "0.3.5"

reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }

log = "0.4"
simplelog = "0.12"

prettytable-rs = "0.10"

spdx = "0.10"

[features]
default = ["win_crlf"]
win_crlf = []
