[package]
name = "cargo-clearlydefined"
version = "0.3.0"
authors = ["Jens Reimann <jreimann@redhat.com>"]
edition = "2021"

keywords = ["license", "cargo", "clearlydefined"]
license = "EPL-2.0"
description = "A tool for checking dependencies with clearlydefined.io"
repository = "https://github.com/ctron/keycloak-crd"
readme = "README.md"

[dependencies]

anyhow = "1.0"
cargo-lock = "9"
clap = { version = "4", features = ["derive"] }
futures = "0.3.5"
log = "0.4"
prettytable-rs = "0.10"
reqwest = { version = "0.11", features = ["json"] }
semver = "1"
serde_json = "1.0"
simplelog = "0.12"
spdx = "0.10"
tokio = { version = "1", features = ["full"] }

[features]
default = ["win_crlf"]
win_crlf = []
